debugging finish, adding eventlistener to next button

--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
       <button id="nextbtn" onclick={nextQuestion()}></button>
     </section>
     <section>
-      <h4>Score:</h4>
+      <h4 id="score-heading">Score:</h4>
       <p id="display-score">0</p>
     </section>
   </main>
+  <p id="finish"></p>
 </body>
 </html>
