--- a/med.html
+++ b/med.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title> Section 1</title>
-  <link href="styles.css" type="stylesheet"/>
+  <link href="css/med.css" type="stylesheet"/>
   <script src="app.js" defer></script>
 </head>
 <body>
@@ -32,5 +32,6 @@
     </section>
   </main>
   <p id="finish"></p>
+  <a href="index.html"><h5 id="return-btn"></h5></a>
 </body>
 </html>
