--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
     </div>
       <section class="links">
       <h5 class="label">Pick a quiz to start:</h5>
-      <a href="med.html" class="card">
+      <a href="/quiz/med.html" class="card">
         <div class="card-text">
           <h3>Medieval Period</h3>
           <p>500AD-1400</p>
         </div>
       </a>
-      <a href="/" class="card">
+      <a href="/quiz/renaissance.html" class="card">
         <div class="card-text">
           <h3>The Renaissance</h3>
           <p>1400-1600</p>
