fixed return button bug

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="high-score">
       <div class="score">
         <p>Highest Score</p>
-        <p>[score]</p>
+        <p id="render-score">[0]</p>
       </div>
       <div class="trophy">
         icon
