--- a/quiz/renaissance.html
+++ b/quiz/renaissance.html
@@ -35,6 +35,6 @@
       <h4 id="wrong"></h4>
   </main>
   <p id="finish"></p>
-  <a href="index.html"><h5 id="return-btn"></h5></a>
+  <a href="/index.html"><h5 id="return-btn"></h5></a>
 </body>
 </html>
