added all sections of quiz

--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
           <p>1400-1600</p>
         </div>
       </a>
-      <a href="/" class="card">
+      <a href="/quiz/rococo.html" class="card">
         <div class="card-text">
           <h3>Rococo Period</h3>
           <p>1699-1780</p>
         </div>
       </a>
-      <a href="/" class="card">
+      <a href="/quiz/impressionism.html" class="card">
         <div class="card-text">
           <h3>Impressionism</h3>
           <p>1865-1885</p>
