removed hover from buttons after answering a question

--- a/quiz/med.html
+++ b/quiz/med.html
@@ -11,28 +11,28 @@
 <body>
   <main class="main">
     <h2 class="title">Medieval Period</h2>
+    <section id="score-keeper">
+      <h4 id="score-heading">Score:</h4>
+      <p id="display-score">0</p>
+    </section>
+    <h4 id="wrong"> </h4>
     <div id="progress-bar">
       <div id="barStatus"></div>
     </div>
     <section id="quiz-box">
       <h3 id="question"></h3>
       <div class="buttons">
-          <button id="answer-1" onclick="{testCorrectness(0)}"></button>
+          <button class="answer" id="answer-1"></button>
 
-          <button id="answer-2" onclick="{testCorrectness(1)}"></button>
+          <button class="answer" id="answer-2" onclick="{testCorrectness(1)}"></button>
 
-          <button id="answer-3" onclick="{testCorrectness(2)}"></button>
+          <button class="answer" id="answer-3" onclick="{testCorrectness(2)}"></button>
 
-          <button id="answer-4" onclick="{testCorrectness(3)}"></button>
+          <button class="answer" id="answer-4" onclick="{testCorrectness(3)}"></button>
 
           <button id="nextbtn"></button>
         </div>
       </section>
-      <section id="score-keeper">
-        <h4 id="score-heading">Score:</h4>
-        <p id="display-score">0</p>
-      </section>
-      <h4 id="wrong"></h4>
   </main>
   <p id="finish"></p>
   <a href="/index.html"><h5 id="return-btn"></h5></a>
