--- a/quiz/rococo.html
+++ b/quiz/rococo.html
@@ -17,13 +17,13 @@
     <section id="quiz-box">
       <h3 id="question"></h3>
       <div class="buttons">
-          <button id="answer-1" onclick="{testCorrectness(0)}"></button>
+          <button class="answer" id="answer-1" onclick="{testCorrectness(0)}"></button>
 
-          <button id="answer-2" onclick="{testCorrectness(1)}"></button>
+          <button class="answer" id="answer-2" onclick="{testCorrectness(1)}"></button>
 
-          <button id="answer-3" onclick="{testCorrectness(2)}"></button>
+          <button class="answer" id="answer-3" onclick="{testCorrectness(2)}"></button>
 
-          <button id="answer-4" onclick="{testCorrectness(3)}"></button>
+          <button class="answer" id="answer-4" onclick="{testCorrectness(3)}"></button>
 
           <button id="nextbtn"></button>
         </div>
