--- a/quiz/impressionism.html
+++ b/quiz/impressionism.html
@@ -17,7 +17,7 @@
     <section id="quiz-box">
       <h3 id="question"></h3>
       <div class="buttons">
-          <button id="answer-1" onclick="{testCorrectness(0)}"></button>
+          <button class="answer" id="answer-1" onclick="{testCorrectness(0)}"></button>
 
           <button id="answer-2" onclick="{testCorrectness(1)}"></button>
 
