added icons to home screen for each quiz

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <p>Are you ready to learn today?</p>
       </div>
       <div>
-        icon
+        <img src="assets/brainey-for-home.svg" alt="mascot character of brain with brown shoes and black hat">
       </div>
     </section>
     <div class="high-score">
@@ -23,9 +23,8 @@
         <p>Highest Score</p>
         <p id="render-score">[0]</p>
       </div>
-      <div class="trophy">
-        icon
-      </div>
+        <img class="trophy" src="assets/trophy.svg" alt="trophy">
+
     </div>
       <section class="links">
       <h5 class="label">Pick a quiz to start:</h5>
@@ -34,24 +33,28 @@
           <h3>Medieval Period</h3>
           <p>500AD-1400</p>
         </div>
+        <img class="icon" src="/assets/knight.svg" alt="knight's helmet">
       </a>
       <a href="/quiz/renaissance.html" class="card">
         <div class="card-text">
           <h3>The Renaissance</h3>
           <p>1400-1600</p>
         </div>
+        <img class="icon" src="/assets/monalisa.svg" alt="knight's helmet">
       </a>
       <a href="/quiz/rococo.html" class="card">
         <div class="card-text">
           <h3>Rococo Period</h3>
           <p>1699-1780</p>
         </div>
+        <img class="icon" src="/assets/rococo.svg" alt="golden natural swirls in rococo style">
       </a>
       <a href="/quiz/impressionism.html" class="card">
         <div class="card-text">
           <h3>Impressionism</h3>
           <p>1865-1885</p>
         </div>
+        <img class="icon" src="/assets/impressionism.svg" alt="lily pad and flowers">
       </a>
     </section>
   </main>
