tried multiple attempts at import / export the score to display on the main page

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/main.css">
   <title>Quiz App</title>
-  
+  <script src="./another.js" type="module" defer></script>
 </head>
 <body>
   <main id="main">
@@ -21,7 +21,7 @@
     <div class="high-score">
       <div class="score">
         <p>Highest Score</p>
-        <p id="render-score">[0]</p>
+        <p id="render-score"></p>
       </div>
         <img class="trophy" src="assets/trophy.svg" alt="trophy">
 
