--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/main.css">
   <title>Quiz App</title>
-  <script src="./js/app.js" type="module" defer></script>
+  <script src="/another.js" type="module" defer></script>
 </head>
 <body>
   <main id="main">
